exam alignment fixes

--- a/client/src/Layouts/userLayoutType1.css
+++ b/client/src/Layouts/userLayoutType1.css
@@ -1712,7 +1712,7 @@ header.website-wrapper {
   }
 
   .college-list-wrapper {
-    width: 620px;
+    width: 100%;
     background-color: #fff;
     margin: 20px 0px;
     padding: 10px 15px;
